# plexus

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONVENTIONS.md  EXCEPTIONS.md  LICENSE  README.md  codecov.yml  conventions.md
backends/plexus-freertos/: CMakeLists.txt
backends/plexus-inproc/: CMakeLists.txt
backends/plexus-native/: CMakeLists.txt
benchmarks/loopback/: CMakeLists.txt  plexus_self_loopback.cpp  self_loopback_lane_intra.h  self_loopback_lane_shm.h  self_loopback_report.h  self_loopback_table.h
benchmarks/shm_notifier/: CMakeLists.txt  notifier_wake_latency.cpp
examples/: .clang-format  CMakeLists.txt  README.md  bytes_pubsub_pub.cpp  bytes_pubsub_sub.cpp  bytes_reqres_client.cpp  bytes_reqres_server.cpp  logging_example.cpp  mcap_basic_foxglove.cpp  mcap_example.cpp  mcap_opaque_supplied_schema.cpp  recording_example.cpp  same_host_node.cpp  shm_local_node.cpp  size_envelope_qos.cpp  typed_inproc_fastpath.cpp  typed_pubsub_pub.cpp  typed_pubsub_sub.cpp  typed_reqres_client.cpp  typed_reqres_server.cpp
examples/discovery/: CMakeLists.txt  discovery_fleet.cpp  discovery_hello.cpp
examples/inproc/: CMakeLists.txt  typed_inproc_fastpath.cpp
examples/intra_node/: CMakeLists.txt  intra_node_self_delivery.cpp
examples/logging/: CMakeLists.txt  logging_example.cpp
examples/mcu/: CMakeLists.txt  README.md  lwip_bench_host.cpp  lwip_discovery_dial_host.cpp  lwip_gate_host.cpp  multicast_gate_host.cpp  run_lwip_bench.sh  run_lwip_discovery_gate.sh  run_lwip_gate.sh  run_multicast_gate.sh  run_onboard_bench.sh  run_serial_gate.sh  run_topic_propagation_gate.sh  serial_bench_host.cpp  serial_gate_host.cpp  stream_meter.h  topic_graph_types.h  topic_propagation_gate_host.cpp
examples/mdns_interop/: CMakeLists.txt  main.cpp
examples/pub_sub/: CMakeLists.txt  bytes_pubsub_pub.cpp  bytes_pubsub_sub.cpp  typed_pubsub_pub.cpp  typed_pubsub_sub.cpp
examples/qos/: CMakeLists.txt  size_envelope_qos.cpp
examples/recording/: CMakeLists.txt  foxglove-plot-check.md  mcap_basic_foxglove.cpp  mcap_opaque_supplied_schema.cpp  recording_example.cpp
examples/req_res/: CMakeLists.txt  bytes_reqres_client.cpp  bytes_reqres_server.cpp  typed_reqres_client.cpp  typed_reqres_server.cpp
examples/same_host/: CMakeLists.txt  same_host_node.cpp  shm_local_node.cpp
lib/plexus/: CMakeLists.txt
lib/plexus-api/: CMakeLists.txt
lib/plexus-asio/: CMakeLists.txt
lib/plexus-core/: CMakeLists.txt
lib/plexus-crypto/: CMakeLists.txt
lib/plexus-datagram/: CMakeLists.txt
lib/plexus-discovery/: CMakeLists.txt
lib/plexus-hints-robotics/: CMakeLists.txt
lib/plexus-inproc/: CMakeLists.txt
lib/plexus-mcu/: CMakeLists.txt
lib/plexus-mdnspp/: CMakeLists.txt
lib/plexus-recording-host/: CMakeLists.txt
lib/plexus-shm/: CMakeLists.txt
lib/plexus-stream/: CMakeLists.txt
lib/plexus-testing/: CMakeLists.txt
lib/plexus-tls/: CMakeLists.txt
lib/plexus-wire/: CMakeLists.txt
tests/: CMakeLists.txt
tests/asio/: CMakeLists.txt  test_asio_policy.cpp  test_spin_run_loop.cpp  test_stream_read_buffer.cpp  test_udp_arq_sweep.cpp  test_udp_congestion.cpp  test_udp_fragmentation.cpp  test_udp_fragmentation_common.h  test_udp_fragmentation_reliable.cpp  test_udp_handshake_arq.cpp  test_udp_handshake_arq_common.h  test_udp_handshake_arq_component.cpp  test_udp_isn.cpp  test_udp_isn_common.h  test_udp_isn_frag.cpp  test_udp_isn_spoof.cpp  test_udp_multicast_socket.cpp  test_udp_reliable_arq.cpp  test_udp_reliable_datagram.cpp  test_udp_reliable_datagram_common.h  test_udp_reliable_datagram_loss.cpp  test_udp_reorder_buffer.cpp  test_udp_rto_estimator.cpp  test_udp_selector.cpp  test_udp_selector_common.h  test_udp_selector_dispatch.cpp  test_udp_teardown.cpp  test_udp_transport.cpp  test_udp_transport_common.h  test_udp_transport_mux.cpp
tests/crypto/: CMakeLists.txt  test_aead_cipher.cpp  test_anti_replay_window_sweep.cpp  test_authenticated_channel.cpp  test_authenticated_channel_common.h  test_authenticated_channel_epoch.cpp  test_datagram_replay.cpp  test_datagram_replay_common.h  test_datagram_replay_drop.cpp  test_datagram_replay_epoch.cpp  test_nonce_uniqueness.cpp  test_nonce_uniqueness_common.h  test_nonce_uniqueness_counter.cpp  test_rekey_threshold_sweep.cpp  test_wire_crypto_position.cpp
tests/discovery/: CMakeLists.txt  test_contact_card.cpp  test_contact_card_common.h  test_contact_card_static_discovery.cpp  test_discovery_self_probe.cpp  test_multicast_discovery.cpp  test_multicast_discovery_common.h  test_multicast_discovery_flood_cap.cpp  test_multicast_discovery_universe.cpp  test_universe.cpp
tests/dtls/: CMakeLists.txt  dtls_identity_fixture.h  dtls_pumps.h  dtls_relay.h  dtls_test_support.h  test_dtls_cookie.cpp  test_dtls_cookie_common.h  test_dtls_cookie_verify.cpp  test_dtls_fragmentation.cpp  test_dtls_fragmentation_burst.cpp  test_dtls_fragmentation_common.h  test_dtls_fragmentation_envelope.cpp  test_dtls_handshake.cpp  test_dtls_handshake_common.h  test_dtls_handshake_dial.cpp  test_dtls_handshake_relay.cpp  test_dtls_mtu.cpp  test_dtls_mtu_common.h  test_dtls_mtu_record.cpp  test_dtls_mux.cpp  test_dtls_mux_common.h  test_dtls_mux_route.cpp  test_dtls_pending_abort.cpp  test_dtls_teardown.cpp  test_dtls_transport_ceiling.cpp
tests/fnx/: CMakeLists.txt  audit_api_facade.cpp  audit_mcu_floor.cpp  audit_node_shm_free.cpp  test_fail_closed.cpp
tests/forwarder/: CMakeLists.txt  test_durability_replay.cpp  test_egress_priority.cpp  test_fetch_latched.cpp  test_forward_gate.cpp  test_forward_splice_alloc.cpp  test_frame_router.cpp  test_frame_router_common.h  test_frame_router_drop.cpp  test_history_ring.cpp  test_history_ring_common.h  test_history_ring_depth.cpp  test_latch_forwarder.cpp  test_latch_forwarder_alloc.cpp  test_latch_forwarder_churn.cpp  test_latch_forwarder_common.h  test_liveliness_monitor.cpp  test_liveliness_monitor_common.h  test_liveliness_monitor_lifetime.cpp  test_message_forwarder.cpp  test_message_forwarder_alloc.cpp  test_message_forwarder_common.h  (+23 more)
tools/: CMakeLists.txt
(+1252 files in other folders)
